GNOME Bugzilla – Bug 745549
glfilter: does not set new caps on its uploader
Last modified: 2015-03-03 19:24:22 UTC
When resolution of my stream change and there is a gltransformation in the pipeline, I get this critical: ** (lt-scout-client:5179): CRITICAL **: gst_video_frame_map_id: assertion 'info->finfo->format == meta->format' failed
+ Trace 234771
Thread 25 (Thread 0x7fff82bff700 (LWP 5231))
Thread 18 (Thread 0x7fffaaffd700 (LWP 5223))
Thread 17 (Thread 0x7fffab7fe700 (LWP 5222))
Thread 16 (Thread 0x7fffabfff700 (LWP 5221))
Thread 15 (Thread 0x7fffd0ff8700 (LWP 5220))
Thread 14 (Thread 0x7fffd17f9700 (LWP 5219))
Thread 13 (Thread 0x7fffd1ffa700 (LWP 5218))
Thread 12 (Thread 0x7fffd27fb700 (LWP 5217))
Thread 11 (Thread 0x7fffd2ffc700 (LWP 5216))
Thread 8 (Thread 0x7fffdcaf2700 (LWP 5211))
Thread 7 (Thread 0x7fffdd2f3700 (LWP 5210))
Thread 6 (Thread 0x7fffde15d700 (LWP 5188))
A workaround is to add g_clear_object (&filter->upload) in gst_gl_filter_set_caps(). It would probably be cleaner to call gst_gl_upload_set_caps() instead, it fix the crash, but then the image is corrupted.
Created attachment 298467 [details] [review] [PATCH] glfilter: Get rid of uploader if caps have changed We need to update the uploader format if that caps have changed. https://bugzilla.gnome.org/show_bug.cgi?id=745549 --- gst-libs/gst/gl/gstglfilter.c | 7 +++++++ 1 file changed, 7 insertions(+)
commit 34402920d268205ac7de5dcb0411274c18cedbef Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Tue Mar 3 13:45:46 2015 -0500 glfilter: Get rid of uploader if caps have changed We need to update the uploader format if that caps have changed. https://bugzilla.gnome.org/show_bug.cgi?id=745549